# CultureInFigurativeLanguage

./: .gitignore  README.md  culture  pyproject.toml
docs/: build_data.py  index.html
docs/data/: tab1_entity_meanings.json
plans/: cultural_training_writeup.aux  cultural_training_writeup.tex
src/culture/: __init__.py
src/culture/analysis/: cluster_entities_with_embeddings.py  cluster_entities_with_embeddings.sh  cross_lingual_same_entity_diff_meaning.py  cross_lingual_same_meaning_diff_entity.py  entity_clustering.py  idiom_statistics.py  intra_lingual_idiom_clusters.py  reanalyze_pairs.py  run_cross_lingual_analysis.sh  test_googletrans.py
src/culture/analysis/notebooks/: analyze_entity_differences.ipynb  cluster_entities_with_embeddings.ipynb  cross_lingual_same_entity_diff_meaning.ipynb  cross_lingual_same_meaning_diff_entity.ipynb  entity_clustering.ipynb  idioms_statistics.ipynb
src/culture/data_processing/: run_ocr.py
src/culture/data_processing/en_idioms/: merge_en_idioms.py  merge_en_idioms.sh  reformat_english_idioms_phrases.py  reformat_english_idioms_phrases.sh  reformat_idiom_kb.py  reformat_idiom_kb.sh  reformat_wiktionary_english_idioms.py  reformat_wiktionary_english_idioms.sh  run_llm_formatting.py  run_llm_formatting.sh  run_ocr.py  run_ocr_doc_parse.sh  run_ocr_pymupdf.py  run_ocr_vllm.sh  run_wiktionary_idioms.sh  wiktionary_idioms.py
src/culture/models/: download_model.py  download_model.sh  llm_utils.py
src/culture/utils/: dataset_download.py  dataset_upload.py
src/culture/website/: build_data.py  index.html
(+20 files in other folders)
